# cmake-example

./: .gitignore  CMakeLists.txt  README.md  main.cpp
c++/: CMakeLists.txt  main.cpp
compilation_basics/: .gitignore  Compilation.md
compilation_basics/chapter1/: Makefile  hello  main.c
compilation_basics/chapter2/: Makefile  hello  hello2  helper.c  helper.h  main.c
include/: Apple.h
pthread-test/: CMakeLists.txt
src/: Apple.cpp
tbb-example/: .gitignore  CMakeLists.txt  CMakeLists.txt_2020  CMakeLists.txt_2021  README.md  tbb-example.cpp  tbb-example.cpp_2020  tbb-example.cpp_2021
tbb-example/cmake/Modules/: FindTBB.cmake
tutorial/: CMakeLists.txt  README.md
tutorial/apple/: CMakeLists.txt
tutorial/orange/: CMakeLists.txt  Orange.cpp
tutorial/orange/include/: Apple.h
tutorial/pear/: CMakeLists.txt  Pear.cpp
tutorial/pear/include/: Apple.h
